--- a/src/style.css
+++ b/src/style.css
@@ -11,9 +11,19 @@ body {
   text-align: center;
   align-items: center;
   position: fixed;
+  justify-content: center;
   top: 0;
   width: 100%;
   height: 10vh;
+}
+.navbar .navbar-Wrap {
+  width: 90%;
+  height: 90%;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=style.css.map */
