--- a/src/style.scss
+++ b/src/style.scss
@@ -16,7 +16,18 @@ body {
   text-align: center;
   align-items: center;
   position: fixed;
+  justify-content: center;
   top: 0;
   width: 100%;
   height: 10vh;
+
+  .navbar-Wrap {
+    width: 90%;
+    height: 90%;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
 }
