--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ body {
   top: 0;
   width: 100%;
   height: 10vh;
+  background-color: #000;
 }
 .navbar .navbar-Wrap {
   width: 90%;
@@ -37,6 +38,19 @@ body {
   text-align: center;
   align-items: center;
   gap: 25px;
+}
+.navbar .navbar-Wrap .navbar-Links ul li {
+  display: flex;
+  flex-direction: column;
+}
+.navbar .navbar-Wrap .navbar-Links ul li a {
+  text-decoration: none;
+  font-family: "Nunito", sans-serif;
+  font-size: 2rem;
+  font-style: bold;
+  color: white;
+  -webkit-text-stroke: white 1px;
+  font-weight: 600;
 }
 
 /*# sourceMappingURL=style.css.map */
