--- a/src/style.scss
+++ b/src/style.scss
@@ -20,6 +20,7 @@ body {
   top: 0;
   width: 100%;
   height: 10vh;
+  background-color: #000;
 
   .navbar-Wrap {
     width: 90%;
@@ -42,6 +43,21 @@ body {
         text-align: center;
         align-items: center;
         gap: 25px;
+
+        li {
+          display: flex;
+          flex-direction: column;
+
+          a {
+            text-decoration: none;
+            font-family: $fontThree;
+            font-size: 2rem;
+            font-style: bold;
+            color: white;
+            -webkit-text-stroke: white 1px;
+            font-weight: 600;
+          }
+        }
       }
     }
   }
