--- a/src/style.scss
+++ b/src/style.scss
@@ -57,6 +57,14 @@ body {
             -webkit-text-stroke: white 1px;
             font-weight: 600;
           }
+
+          #nav-Icons {
+            font-size: 2.5rem;
+            font-style: bold;
+            color: white;
+            -webkit-text-stroke: rgb(88, 15, 15) 1px;
+            font-weight: 600;
+          }
         }
       }
     }
