--- a/src/style.scss
+++ b/src/style.scss
@@ -56,6 +56,7 @@ body {
             color: white;
             -webkit-text-stroke: white 1px;
             font-weight: 600;
+            transition: all 250ms ease-in-out;
           }
 
           #nav-Icons {
@@ -64,6 +65,21 @@ body {
             color: white;
             -webkit-text-stroke: rgb(88, 15, 15) 1px;
             font-weight: 600;
+            transition: all 250ms ease-in-out;
+          }
+
+          &:hover {
+            cursor: pointer;
+
+            a {
+              color: rgb(82, 81, 81);
+              -webkit-text-stroke: rgb(82, 81, 81) 1px;
+            }
+
+            #nav-Icons {
+              color: rgb(82, 81, 81);
+              -webkit-text-stroke: rgb(82, 81, 81) 1px;
+            }
           }
         }
       }
