--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ body {
   top: 0;
   width: 100%;
   height: 14vh;
+  transition: all 500ms ease-in-out;
   background-color: #000;
 }
 .navbar .navbar-Wrap {
@@ -71,6 +72,10 @@ body {
 .navbar .navbar-Wrap .navbar-Links ul li:hover #nav-Icons {
   color: rgb(82, 81, 81);
   -webkit-text-stroke: rgb(82, 81, 81) 1px;
+}
+
+.navbar:hover {
+  transform: translateY(-99%);
 }
 
 /*# sourceMappingURL=style.css.map */
