--- a/src/style.scss
+++ b/src/style.scss
@@ -20,6 +20,7 @@ body {
   top: 0;
   width: 100%;
   height: 14vh;
+  transition: all 500ms ease-in-out;
   background-color: #000;
 
   .navbar-Wrap {
@@ -85,4 +86,8 @@ body {
       }
     }
   }
+}
+
+.navbar:hover {
+  transform: translateY(-99%);
 }
