--- a/src/style.css
+++ b/src/style.css
@@ -73,6 +73,14 @@ body {
   color: rgb(82, 81, 81);
   -webkit-text-stroke: rgb(82, 81, 81) 1px;
 }
+.navbar .nav-Btn-Line {
+  position: absolute;
+  height: 60px;
+  background-color: red;
+  width: 5px;
+  bottom: -40%;
+  left: 10%;
+}
 
 .navbar:hover {
   transform: translateY(-99%);
