--- a/src/style.scss
+++ b/src/style.scss
@@ -86,6 +86,15 @@ body {
       }
     }
   }
+
+  .nav-Btn-Line {
+    position: absolute;
+    height: 60px;
+    background-color: red;
+    width: 5px;
+    bottom: -40%;
+    left: 10%;
+  }
 }
 
 .navbar:hover {
