--- a/src/style.scss
+++ b/src/style.scss
@@ -90,10 +90,21 @@ body {
   .nav-Btn-Line {
     position: absolute;
     height: 60px;
-    background-color: red;
+    background-color: black;
     width: 5px;
     bottom: -40%;
     left: 10%;
+
+    .nav-Btn-Box {
+      background-color: black;
+      height: 50px;
+      border-radius: 15px 15px 3px 3px;
+      width: 40px;
+      position: relative;
+      top: 50px;
+      left: 50%;
+      transform: translate(-50%);
+    }
   }
 }
 
