--- a/src/style.scss
+++ b/src/style.scss
@@ -137,7 +137,52 @@ body {
 }
 //  navbar responsvness
 @media screen and (max-width: 900px) {
-  // size 900px
+  .navbar {
+    width: 100%;
+
+    .navbar-Wrap {
+      width: 95%;
+      height: 90%;
+      .navbar-Links {
+        ul {
+          gap: 35px;
+
+          li {
+            a {
+              font-size: 1.7rem;
+            }
+
+            #nav-Icons {
+              font-size: 2.1rem;
+            }
+          }
+        }
+      }
+    }
+
+    .nav-Btn-Line {
+      position: absolute;
+      height: 110%;
+      background-color: black;
+      width: 5px;
+      top: 50%;
+      left: 10%;
+      transition: all 500ms ease-in-out;
+
+      .nav-Btn-Box {
+        position: absolute;
+        background-color: black;
+        height: 50px;
+        border-radius: 15px 15px 5px 5px;
+        width: 40px;
+        position: relative;
+        top: 100%;
+        left: 50%;
+        transform: translate(-50%);
+        transition: all 100ms ease-in-out;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 900px) {
