--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,7 @@ body {
   height: 14vh;
   transition: all 500ms ease-in-out;
   background-color: #000;
+  z-index: 10;
 }
 .navbar .navbar-Wrap {
   width: 90%;
@@ -111,9 +112,11 @@ body {
 
 .nav-Btn-Line.active {
   height: 80%;
+  z-index: 1;
 }
 .nav-Btn-Line.active .nav-Btn-Box {
   top: 90%;
+  z-index: 1;
 }
 
 @media screen and (max-width: 900px) {
@@ -133,26 +136,25 @@ body {
   .navbar .navbar-Wrap .navbar-Links ul li #nav-Icons {
     font-size: 2.1rem;
   }
-  .navbar .nav-Btn-Line {
-    position: absolute;
-    height: 110%;
-    background-color: black;
-    width: 5px;
-    top: 50%;
-    left: 10%;
-    transition: all 500ms ease-in-out;
+}
+@media screen and (max-width: 900px) {
+  .navbar .navbar-Wrap {
+    z-index: 5;
   }
-  .navbar .nav-Btn-Line .nav-Btn-Box {
-    position: absolute;
-    background-color: black;
-    height: 50px;
-    border-radius: 15px 15px 5px 5px;
-    width: 40px;
-    position: relative;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%);
-    transition: all 100ms ease-in-out;
+  .navbar .navbar-Wrap .navbar-Links ul {
+    gap: 25px;
+  }
+  .navbar .navbar-Wrap .navbar-Links ul li a {
+    font-size: 1rem;
+    -webkit-text-stroke: rgb(88, 15, 15) 0px;
+  }
+  .navbar .navbar-Wrap .navbar-Links ul li #nav-Icons {
+    font-size: 1rem;
+    -webkit-text-stroke: rgb(88, 15, 15) 0px;
+  }
+  .nav-Btn-Line.active {
+    height: 100%;
+    z-index: 1;
   }
 }
 
