--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,8 @@ body {
   gap: 25px;
 }
 .navbar .navbar-Wrap .navbar-Links ul li {
-  display: none;
+  opacity: 0;
+  display: flex;
   flex-direction: column;
   transition: all 250ms ease-in-out;
 }
@@ -74,6 +75,10 @@ body {
 .navbar .navbar-Wrap .navbar-Links ul li:hover #nav-Icons {
   color: rgb(82, 81, 81);
   -webkit-text-stroke: rgb(82, 81, 81) 1px;
+}
+.navbar .navbar-Wrap .navbar-Links ul li.active {
+  display: flex;
+  opacity: 1;
 }
 .navbar .nav-Btn-Line {
   position: absolute;
@@ -109,10 +114,6 @@ body {
 .navbar.active {
   height: 20vh;
   transform: translateY(-99%);
-}
-
-li.active {
-  display: flex;
 }
 
 .nav-Btn-Line.active {
