--- a/src/style.scss
+++ b/src/style.scss
@@ -47,7 +47,8 @@ body {
         gap: 25px;
 
         li {
-          display: none;
+          opacity: 0;
+          display: flex;
           flex-direction: column;
           transition: all 250ms ease-in-out;
 
@@ -84,6 +85,11 @@ body {
               -webkit-text-stroke: rgb(82, 81, 81) 1px;
             }
           }
+        }
+
+        li.active {
+          display: flex;
+          opacity: 1;
         }
       }
     }
@@ -128,10 +134,6 @@ body {
 .navbar.active {
   height: 20vh;
   transform: translateY(-99%);
-}
-
-li.active {
-  display: flex;
 }
 
 .nav-Btn-Line.active {
