--- a/src/style.css
+++ b/src/style.css
@@ -131,12 +131,12 @@ body {
   transform: translateY(-99%);
 }
 
-.navbar.active .nav-Btn-Line.active {
+.navbar.active .navbar .nav-Btn-Line {
   height: 65%;
   z-index: 1;
 }
 
-.navbar.active .nav-Btn-Line.active .nav-Btn-Box {
+.navbar.active .navbar .nav-Btn-Line .nav-Btn-Box {
   top: 90%;
   z-index: 1;
 }
