--- a/src/style.scss
+++ b/src/style.scss
@@ -129,24 +129,21 @@ body {
     }
   }
 }
-
+// active buttons
 .navbar.active {
   height: 20vh;
   transform: translateY(-99%);
 
-  .navbar {
-    .nav-Btn-Line {
-      height: 65%;
-      z-index: 1;
+  .nav-Btn-Line.active {
+    height: 65%;
+    z-index: 1;
 
-      .nav-Btn-Box {
-        top: 90%;
-        z-index: 1;
-      }
+    .nav-Btn-Box {
+      top: 90%;
+      z-index: 1;
     }
   }
 }
-
 //  navbar responsvness
 @media screen and (max-width: 900px) {
   .navbar {
@@ -200,7 +197,7 @@ body {
     }
   }
 
-  .nav-Btn-Line.active {
+  .nav-Btn-Line {
     z-index: 1;
   }
 }
