--- a/src/style.css
+++ b/src/style.css
@@ -131,12 +131,12 @@ body {
   transform: translateY(-99%);
 }
 
-.navbar.active .navbar .nav-Btn-Line {
+.navbar.active .nav-Btn-Line.active {
   height: 65%;
   z-index: 1;
 }
 
-.navbar.active .navbar .nav-Btn-Line .nav-Btn-Box {
+.navbar.active .nav-Btn-Line.active .nav-Btn-Box {
   top: 90%;
   z-index: 1;
 }
@@ -183,7 +183,7 @@ body {
     -webkit-text-stroke: rgb(88, 15, 15) 0;
   }
 
-  .nav-Btn-Line.active {
+  .nav-Btn-Line {
     z-index: 1;
   }
 }
