--- a/src/style.scss
+++ b/src/style.scss
@@ -117,13 +117,17 @@ body {
       transition: all 100ms ease-in-out;
       z-index: 1;
     }
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
 
 // active buttons
 .navbar.active {
   height: 20vh;
-  transform: translateY(-99%);
+  transform: translateY(-100%); // Updated to translateY(-100%)
 
   .nav-Btn-Line.active {
     height: 65%;
@@ -159,6 +163,14 @@ body {
         }
       }
     }
+
+    .nav-Btn-Line.active {
+      height: auto;
+
+      .nav-Btn-Box {
+        top: auto;
+      }
+    }
   }
 }
 
@@ -183,6 +195,14 @@ body {
             }
           }
         }
+      }
+    }
+
+    .nav-Btn-Line.active {
+      height: auto;
+
+      .nav-Btn-Box {
+        top: auto;
       }
     }
   }
