--- a/src/style.css
+++ b/src/style.css
@@ -16,9 +16,9 @@ body {
   top: 0;
   width: 100%;
   height: 14vh;
-  transition: all 500ms ease-in-out;
   background-color: #000;
   z-index: 10;
+  transition: all 500ms ease-in-out;
 }
 
 .navbar .navbar-Wrap {
@@ -29,6 +29,9 @@ body {
   text-align: center;
   align-items: center;
   justify-content: center;
+  position: relative;
+  z-index: 5;
+  transition: all 500ms ease-in-out;
 }
 
 .navbar .navbar-Wrap .navbar-Links {
@@ -44,6 +47,7 @@ body {
   text-align: center;
   align-items: center;
   gap: 25px;
+  transition: all 500ms ease-in-out;
 }
 
 .navbar .navbar-Wrap .navbar-Links ul li {
@@ -134,15 +138,6 @@ body {
 }
 
 @media screen and (max-width: 1024px) {
-  .navbar {
-    width: 100%;
-  }
-
-  .navbar .navbar-Wrap {
-    width: 95%;
-    height: 90%;
-  }
-
   .navbar .navbar-Wrap .navbar-Links ul {
     gap: 35px;
   }
@@ -165,10 +160,6 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-  .navbar .navbar-Wrap {
-    z-index: 5;
-  }
-
   .navbar .navbar-Wrap .navbar-Links ul {
     gap: 25px;
   }
