--- a/src/style.scss
+++ b/src/style.scss
@@ -20,9 +20,9 @@ body {
   top: 0;
   width: 100%;
   height: 14vh;
-  transition: all 500ms ease-in-out;
   background-color: #000;
   z-index: 10;
+  transition: all 500ms ease-in-out;
 
   .navbar-Wrap {
     width: 90%;
@@ -32,6 +32,9 @@ body {
     text-align: center;
     align-items: center;
     justify-content: center;
+    position: relative;
+    z-index: 5;
+    transition: all 500ms ease-in-out;
 
     .navbar-Links {
       display: flex;
@@ -45,6 +48,7 @@ body {
         text-align: center;
         align-items: center;
         gap: 25px;
+        transition: all 500ms ease-in-out;
 
         li {
           opacity: 0;
@@ -127,7 +131,7 @@ body {
 // active buttons
 .navbar.active {
   height: 20vh;
-  transform: translateY(-100%); // Updated to translateY(-100%)
+  transform: translateY(-100%);
 
   .nav-Btn-Line.active {
     height: 65%;
@@ -141,12 +145,7 @@ body {
 //  navbar responsvness
 @media screen and (max-width: 1024px) {
   .navbar {
-    width: 100%;
-
     .navbar-Wrap {
-      width: 95%;
-      height: 90%;
-
       .navbar-Links {
         ul {
           gap: 35px;
@@ -177,8 +176,6 @@ body {
 @media screen and (max-width: 768px) {
   .navbar {
     .navbar-Wrap {
-      z-index: 5;
-
       .navbar-Links {
         ul {
           gap: 25px;
