--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@ body {
   background-color: #000;
   z-index: 10;
   transition: all 500ms ease-in-out;
+  transform: translateY(0%);
 }
 
 .navbar .navbar-Wrap {
