--- a/src/style.scss
+++ b/src/style.scss
@@ -36,6 +36,7 @@ body {
     position: relative;
     z-index: 5;
     transition: all 500ms ease-in-out;
+    padding: 15px;
 
     .navbar-Links {
       display: flex;
