--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,7 @@ body {
   position: relative;
   z-index: 5;
   transition: all 500ms ease-in-out;
+  padding: 15px;
 }
 
 .navbar .navbar-Wrap .navbar-Links {
