--- a/src/style.scss
+++ b/src/style.scss
@@ -22,7 +22,7 @@ body {
   height: 14vh;
   background-color: #000;
   z-index: 10;
-  transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in;
   transform: translateY(0%);
 
   .navbar-Wrap {
@@ -35,7 +35,7 @@ body {
     justify-content: center;
     position: relative;
     z-index: 5;
-    transition: all 500ms ease-in-out;
+    transition: all 500ms ease-in;
     padding: 15px;
 
     .navbar-Links {
@@ -50,13 +50,13 @@ body {
         text-align: center;
         align-items: center;
         gap: 25px;
-        transition: all 500ms ease-in-out;
+        transition: all 500ms ease-in;
 
         li {
           opacity: 0;
           display: flex;
           flex-direction: column;
-          transition: all 250ms ease-in-out;
+          transition: all 250ms ease-in;
 
           a {
             text-decoration: none;
@@ -66,7 +66,7 @@ body {
             color: white;
             -webkit-text-stroke: white 1px;
             font-weight: 600;
-            transition: all 250ms ease-in-out;
+            transition: all 250ms ease-in;
           }
 
           #nav-Icons {
@@ -75,7 +75,7 @@ body {
             color: white;
             -webkit-text-stroke: rgb(88, 15, 15) 1px;
             font-weight: 600;
-            transition: all 250ms ease-in-out;
+            transition: all 250ms ease-in;
           }
 
           &:hover {
@@ -108,7 +108,7 @@ body {
     width: 5px;
     top: 50%;
     left: 10%;
-    transition: all 500ms ease-in-out;
+    transition: all 500ms ease-in;
     z-index: 1;
 
     .nav-Btn-Box {
@@ -120,7 +120,7 @@ body {
       top: 100%;
       left: 50%;
       transform: translate(-50%);
-      transition: all 100ms ease-in-out;
+      transition: all 100ms ease-in;
       z-index: 1;
     }
 
@@ -133,7 +133,7 @@ body {
 // active buttons
 .navbar.active {
   height: 20vh;
-  transform: translateY(-100%);
+  transform: translateY(-65%);
 
   .nav-Btn-Line.active {
     height: 65%;
