--- a/src/style.css
+++ b/src/style.css
@@ -49,12 +49,14 @@ body {
   text-align: center;
   align-items: center;
   gap: 25px;
-  transition: all 500ms ease-in;
+  transition: all 250ms ease-in;
 }
 
 .navbar .navbar-Wrap .navbar-Links ul li {
   opacity: 0;
   display: flex;
+  padding: 0;
+  margin: 0;
   flex-direction: column;
   transition: all 250ms ease-in;
 }
@@ -105,7 +107,7 @@ body {
   width: 5px;
   top: 50%;
   left: 10%;
-  transition: all 500ms ease-in;
+  transition: all 250ms ease-in;
   z-index: 1;
 }
 
@@ -128,7 +130,7 @@ body {
 
 .navbar.active {
   height: 20vh;
-  transform: translateY(-65%);
+  transform: translateY(-45%);
 }
 
 .navbar.active .nav-Btn-Line.active {
