--- a/src/style.scss
+++ b/src/style.scss
@@ -208,3 +208,12 @@ body {
     }
   }
 }
+// Header
+.header {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
