--- a/src/style.css
+++ b/src/style.css
@@ -168,6 +168,16 @@ body {
   text-align: center;
   align-items: center;
   justify-content: center;
+  background-color: #333;
+}
+.header .header-Wrap {
+  width: 90%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=style.css.map */
