--- a/src/style.scss
+++ b/src/style.scss
@@ -226,5 +226,16 @@ body {
     text-align: center;
     align-items: center;
     justify-content: center;
+
+    .header-Titles-Wrap {
+      .header-Title-Text {
+        font-size: 7rem;
+        -webkit-text-stroke: white 7px;
+        letter-spacing: 2px;
+        filter: drop-shadow(5px 5px 1px black);
+        font-family: $fontThree;
+        color: white;
+      }
+    }
   }
 }
