--- a/src/style.css
+++ b/src/style.css
@@ -178,14 +178,39 @@ body {
   text-align: center;
   align-items: center;
   justify-content: center;
+  gap: 4rem;
+}
+.header .header-Wrap .header-Titles-Wrap {
+  position: relative;
+  width: 100%;
+  height: 45%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 .header .header-Wrap .header-Titles-Wrap .header-Title-Text {
   font-size: 7rem;
   -webkit-text-stroke: white 7px;
   letter-spacing: 2px;
+  margin: 0;
   filter: drop-shadow(5px 5px 1px black);
   font-family: "Nunito", sans-serif;
   color: white;
+}
+.header .header-Wrap .header-Titles-Wrap #header-Icons {
+  color: #a79a2d;
+  font-size: 15rem;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  filter: drop-shadow(5px 5px 1px black);
+  transition: all 500ms ease-in-out;
+}
+.header .header-Wrap .header-Titles-Wrap #header-Icons:hover {
+  opacity: 0;
+  transform: scale(1.1);
 }
 
 /*# sourceMappingURL=style.css.map */
