--- a/src/style.scss
+++ b/src/style.scss
@@ -226,15 +226,41 @@ body {
     text-align: center;
     align-items: center;
     justify-content: center;
+    gap: 4rem;
 
     .header-Titles-Wrap {
+      position: relative;
+      width: 100%;
+      height: 45%;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+
       .header-Title-Text {
         font-size: 7rem;
         -webkit-text-stroke: white 7px;
         letter-spacing: 2px;
+        margin: 0;
         filter: drop-shadow(5px 5px 1px black);
         font-family: $fontThree;
         color: white;
+      }
+
+      #header-Icons {
+        color: #a79a2d;
+        font-size: 15rem;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%);
+        filter: drop-shadow(5px 5px 1px black);
+        transition: all 500ms ease-in-out;
+      }
+
+      #header-Icons:hover {
+        opacity: 0;
+        transform: scale(1.1);
       }
     }
   }
