--- a/src/style.css
+++ b/src/style.css
@@ -189,6 +189,7 @@ body {
   text-align: center;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 .header .header-Wrap .header-Titles-Wrap .header-Title-Text {
   font-size: 7rem;
@@ -204,13 +205,14 @@ body {
   font-size: 15rem;
   position: absolute;
   left: 50%;
-  transform: translate(-50%);
+  top: 50%;
+  transform: translate(-50%, -50%);
   filter: drop-shadow(5px 5px 1px black);
   transition: all 500ms ease-in-out;
 }
 .header .header-Wrap .header-Titles-Wrap #header-Icons:hover {
   opacity: 0;
-  transform: scale(1.1);
+  transform: scale(5.1);
 }
 
 /*# sourceMappingURL=style.css.map */
