--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lemon&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap");
-
 body {
   padding: 0;
   margin: 0;
@@ -21,7 +20,6 @@ body {
   transition: all 150ms ease-in;
   transform: translateY(0%);
 }
-
 .navbar .navbar-Wrap {
   width: 90%;
   height: 90%;
@@ -35,11 +33,9 @@ body {
   transition: all 150ms ease-in;
   padding: 15px;
 }
-
 .navbar .navbar-Wrap .navbar-Links {
   display: flex;
 }
-
 .navbar .navbar-Wrap .navbar-Links ul {
   display: flex;
   list-style: none;
@@ -51,7 +47,6 @@ body {
   gap: 25px;
   transition: all 150ms ease-in;
 }
-
 .navbar .navbar-Wrap .navbar-Links ul li {
   opacity: 0;
   display: flex;
@@ -60,7 +55,6 @@ body {
   flex-direction: column;
   transition: all 150ms ease-in;
 }
-
 .navbar .navbar-Wrap .navbar-Links ul li a {
   text-decoration: none;
   font-family: "Nunito", sans-serif;
@@ -71,7 +65,6 @@ body {
   font-weight: 600;
   transition: all 150ms ease-in;
 }
-
 .navbar .navbar-Wrap .navbar-Links ul li #nav-Icons {
   font-size: 3.1rem;
   font-style: bold;
@@ -80,26 +73,21 @@ body {
   font-weight: 600;
   transition: all 150ms ease-in;
 }
-
 .navbar .navbar-Wrap .navbar-Links ul li:hover {
   cursor: pointer;
 }
-
 .navbar .navbar-Wrap .navbar-Links ul li:hover a {
   color: rgb(82, 81, 81);
   -webkit-text-stroke: rgb(82, 81, 81) 1px;
 }
-
 .navbar .navbar-Wrap .navbar-Links ul li:hover #nav-Icons {
   color: rgb(82, 81, 81);
   -webkit-text-stroke: rgb(82, 81, 81) 1px;
 }
-
 .navbar .navbar-Wrap .navbar-Links ul li.active {
   display: flex;
   opacity: 1;
 }
-
 .navbar .nav-Btn-Line {
   position: absolute;
   height: 90%;
@@ -110,7 +98,6 @@ body {
   transition: all 150ms ease-in;
   z-index: 1;
 }
-
 .navbar .nav-Btn-Line .nav-Btn-Box {
   background-color: black;
   height: 50px;
@@ -123,7 +110,6 @@ body {
   transition: all 150ms ease-in;
   z-index: 1;
 }
-
 .navbar .nav-Btn-Line:hover {
   cursor: pointer;
 }
@@ -132,11 +118,9 @@ body {
   height: 20vh;
   transform: translateY(-55%);
 }
-
 .navbar.active .nav-Btn-Line.active {
   height: 65%;
 }
-
 .navbar.active .nav-Btn-Line.active .nav-Btn-Box {
   top: 90%;
 }
@@ -145,48 +129,38 @@ body {
   .navbar .navbar-Wrap .navbar-Links ul {
     gap: 35px;
   }
-
   .navbar .navbar-Wrap .navbar-Links ul li a {
     font-size: 1.7rem;
   }
-
   .navbar .navbar-Wrap .navbar-Links ul li #nav-Icons {
     font-size: 2.1rem;
   }
-
   .navbar .nav-Btn-Line.active {
     height: auto;
   }
-
   .navbar .nav-Btn-Line.active .nav-Btn-Box {
     top: auto;
   }
 }
-
 @media screen and (max-width: 768px) {
   .navbar .navbar-Wrap .navbar-Links ul {
     gap: 25px;
   }
-
   .navbar .navbar-Wrap .navbar-Links ul li a {
     font-size: 1rem;
     -webkit-text-stroke: white 0;
   }
-
   .navbar .navbar-Wrap .navbar-Links ul li #nav-Icons {
     font-size: 1rem;
     -webkit-text-stroke: white 0;
   }
-
   .navbar .nav-Btn-Line.active {
     height: auto;
   }
-
   .navbar .nav-Btn-Line.active .nav-Btn-Box {
     top: auto;
   }
 }
-
 .header {
   height: 100vh;
   display: flex;
@@ -196,7 +170,6 @@ body {
   justify-content: center;
   background-color: #333;
 }
-
 .header .header-Wrap {
   width: 90%;
   height: 90%;
@@ -207,7 +180,6 @@ body {
   justify-content: center;
   gap: 3rem;
 }
-
 .header .header-Wrap .header-Titles-Wrap {
   position: relative;
   width: 100%;
@@ -219,7 +191,6 @@ body {
   justify-content: center;
   overflow: hidden;
 }
-
 .header .header-Wrap .header-Titles-Wrap .header-Title-Text {
   font-size: 7rem;
   -webkit-text-stroke: white 7px;
@@ -229,7 +200,6 @@ body {
   font-family: "Nunito", sans-serif;
   color: white;
 }
-
 .header .header-Wrap .header-Titles-Wrap #header-Icons {
   color: #a79a2d;
   font-size: 15rem;
@@ -239,9 +209,12 @@ body {
   transform: translate(-50%, -50%);
   filter: drop-shadow(5px 5px 1px black);
   transition: all 500ms ease-in-out;
+  transform: scale(5.5);
+  opacity: 0;
+}
+.header .header-Wrap .header-Titles-Wrap #header-Icons.active {
+  opacity: 1;
+  transform: scale(1);
 }
 
-.header .header-Wrap .header-Titles-Wrap #header-Icons:hover {
-  opacity: 0;
-  transform: scale(5.1);
-}
+/*# sourceMappingURL=style.css.map */
