--- a/src/style.scss
+++ b/src/style.scss
@@ -258,11 +258,13 @@ body {
         transform: translate(-50%, -50%);
         filter: drop-shadow(5px 5px 1px black);
         transition: all 500ms ease-in-out;
+        transform: scale(5.5);
+        opacity: 0;
       }
 
-      #header-Icons:hover {
-        opacity: 0;
-        transform: scale(5.1);
+      #header-Icons.active {
+        opacity: 1;
+        transform: scale(1);
       }
     }
   }
