--- a/src/style.css
+++ b/src/style.css
@@ -183,7 +183,7 @@ body {
 .header .header-Wrap .header-Titles-Wrap {
   position: relative;
   width: 100%;
-  height: 35%;
+  height: 40%;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -205,16 +205,13 @@ body {
   font-size: 15rem;
   position: absolute;
   left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%);
   filter: drop-shadow(5px 5px 1px black);
   transition: all 500ms ease-in-out;
-  transform: scale(5.5);
   opacity: 0;
 }
 .header .header-Wrap .header-Titles-Wrap #header-Icons.active {
   opacity: 1;
-  transform: scale(1);
 }
 
 /*# sourceMappingURL=style.css.map */
