--- a/src/style.scss
+++ b/src/style.scss
@@ -231,7 +231,7 @@ body {
     .header-Titles-Wrap {
       position: relative;
       width: 100%;
-      height: 35%;
+      height: 40%;
       display: flex;
       flex-direction: column;
       text-align: center;
@@ -254,17 +254,14 @@ body {
         font-size: 15rem;
         position: absolute;
         left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%);
         filter: drop-shadow(5px 5px 1px black);
         transition: all 500ms ease-in-out;
-        transform: scale(5.5);
         opacity: 0;
       }
 
       #header-Icons.active {
         opacity: 1;
-        transform: scale(1);
       }
     }
   }
