--- a/src/style.scss
+++ b/src/style.scss
@@ -254,13 +254,12 @@ body {
         font-size: 15rem;
         position: absolute;
         left: 45%;
-        transform: translate(-45%);
+        transform: translate(-50%) scale(2);
         filter: drop-shadow(5px 5px 1px black);
         transition: all 200ms ease-in-out;
         opacity: 0;
         padding: 0;
         margin: 0;
-        transform: scale(2);
       }
 
       #header-Icons.active {
