added responsvness laders

--- a/src/style.scss
+++ b/src/style.scss
@@ -270,3 +270,11 @@ body {
     }
   }
 }
+//  header responsvness
+@media screen and (max-width: 1000px) {
+  //1000px
+}
+
+@media screen and (max-width: 768px) {
+  // 768px
+}
