added styling to meals wrap

--- a/src/style.css
+++ b/src/style.css
@@ -253,5 +253,14 @@ body {
   display: flex;
   background-color: #222;
 }
+.meals .meals-Wrap {
+  width: 90%;
+  height: 90%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 
 /*# sourceMappingURL=style.css.map */
