--- a/src/style.scss
+++ b/src/style.scss
@@ -312,20 +312,30 @@ body {
 // meals
 .meals {
   height: 100vh;
+  display: flex;
   text-align: center;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  display: flex;
   background-color: #222;
 
   .meals-Wrap {
     width: 90%;
     height: 90%;
     display: flex;
+    flex-direction: column;
     text-align: center;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: space-between;
+
+    .meals-Top {
+      height: 30%;
+      width: 100%;
+    }
+
+    .meals-Bottom {
+      width: 100%;
+      height: 70%;
+    }
   }
 }
