--- a/src/style.scss
+++ b/src/style.scss
@@ -331,6 +331,19 @@ body {
     .meals-Top {
       height: 30%;
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+
+      .meals-Top-Title-Wrap {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+      }
     }
 
     .meals-Bottom {
