added styling to meals bottom wrap

--- a/src/style.scss
+++ b/src/style.scss
@@ -359,6 +359,15 @@ body {
     .meals-Bottom {
       width: 100%;
       height: 70%;
+      .meals-Bottom-Wrap {
+        height: 90%;
+        width: 90%;
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+      }
     }
   }
 }
