--- a/src/style.css
+++ b/src/style.css
@@ -291,5 +291,14 @@ body {
   width: 100%;
   height: 70%;
 }
+.meals .meals-Wrap .meals-Bottom .meals-Bottom-Wrap {
+  height: 90%;
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
 
 /*# sourceMappingURL=style.css.map */
