--- a/src/style.css
+++ b/src/style.css
@@ -310,6 +310,18 @@ body {
   text-align: center;
   align-items: center;
   justify-content: space-around;
+  transform: rotate(2deg);
+  position: relative;
+}
+.meals .meals-Wrap .meals-Bottom .meals-Bottom-Wrap .meal-Book::before {
+  position: absolute;
+  content: "";
+  left: -10px;
+  bottom: 5px;
+  background-color: #8f8317;
+  height: 100%;
+  width: 10px;
+  transform: skewY(40deg);
 }
 
 /*# sourceMappingURL=style.css.map */
