added drop shadow and more

--- a/src/style.css
+++ b/src/style.css
@@ -312,7 +312,8 @@ body {
   justify-content: space-around;
   transform: rotate(1deg);
   position: relative;
-  transition: all 250ms ease-in-out;
+  transition: all 550ms ease-in-out;
+  filter: drop-shadow(15px 15px 15px black);
 }
 .meals .meals-Wrap .meals-Bottom .meals-Bottom-Wrap .meal-Book .meal-Book-Img-Wrap {
   height: 50%;
@@ -344,7 +345,7 @@ body {
 }
 .meals .meals-Wrap .meals-Bottom .meals-Bottom-Wrap .meal-Book:hover {
   cursor: pointer;
-  transform: translateY(-5%);
+  transform: translateY(-10%);
 }
 
 /*# sourceMappingURL=style.css.map */
