--- a/src/style.scss
+++ b/src/style.scss
@@ -367,7 +367,8 @@ body {
         flex-direction: row;
         text-align: center;
         align-items: center;
-        justify-content: center;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
 
         .meal-Book {
           height: 450px;
