--- a/src/style.css
+++ b/src/style.css
@@ -245,7 +245,7 @@ body {
   }
 }
 .meals {
-  height: 100vh;
+  height: clamp(400px, 100%, 1000px);
   display: flex;
   text-align: center;
   align-items: center;
@@ -260,7 +260,8 @@ body {
   flex-direction: column;
   text-align: center;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 10rem;
 }
 .meals .meals-Wrap .meals-Top {
   height: 30%;
@@ -273,6 +274,7 @@ body {
 }
 .meals .meals-Wrap .meals-Top .meals-Top-Title-Wrap {
   display: flex;
+  margin-top: 5rem;
   flex-direction: column;
   text-align: center;
   align-items: center;
@@ -290,6 +292,7 @@ body {
 .meals .meals-Wrap .meals-Bottom {
   width: 100%;
   height: 70%;
+  margin-bottom: 5rem;
 }
 .meals .meals-Wrap .meals-Bottom .meals-Bottom-Wrap {
   height: 90%;
@@ -300,6 +303,7 @@ body {
   align-items: center;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  gap: 5rem;
 }
 .meals .meals-Wrap .meals-Bottom .meals-Bottom-Wrap .meal-Book {
   height: 450px;
@@ -315,6 +319,7 @@ body {
   position: relative;
   transition: all 550ms ease-in-out;
   filter: drop-shadow(15px 15px 15px black);
+  margin: 1rem;
 }
 .meals .meals-Wrap .meals-Bottom .meals-Bottom-Wrap .meal-Book .meal-Book-Img-Wrap {
   height: 50%;
