--- a/src/style.scss
+++ b/src/style.scss
@@ -311,7 +311,8 @@ body {
 }
 // meals
 .meals {
-  height: 100vh;
+  // height: 100vh;
+  height: clamp(400px, 100%, 1000px);
   display: flex;
   text-align: center;
   align-items: center;
@@ -326,7 +327,8 @@ body {
     flex-direction: column;
     text-align: center;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 10rem;
 
     .meals-Top {
       height: 30%;
@@ -339,6 +341,7 @@ body {
 
       .meals-Top-Title-Wrap {
         display: flex;
+        margin-top: 5rem;
         flex-direction: column;
         text-align: center;
         align-items: center;
@@ -359,6 +362,7 @@ body {
     .meals-Bottom {
       width: 100%;
       height: 70%;
+      margin-bottom: 5rem;
 
       .meals-Bottom-Wrap {
         height: 90%;
@@ -369,6 +373,7 @@ body {
         align-items: center;
         justify-content: space-evenly;
         flex-wrap: wrap;
+        gap: 5rem;
 
         .meal-Book {
           height: 450px;
@@ -384,6 +389,7 @@ body {
           position: relative;
           transition: all 550ms ease-in-out;
           filter: drop-shadow(15px 15px 15px black);
+          margin: 1rem;
 
           .meal-Book-Img-Wrap {
             height: 50%;
