--- a/src/style.scss
+++ b/src/style.scss
@@ -418,6 +418,12 @@ body {
               font-size: 1rem;
               transform: rotate(0.5deg);
               -webkit-text-stroke: #000 1px;
+              transition: all 250ms ease-in-out;
+
+              &:hover {
+                cursor: pointer;
+                background-color: #818181;
+              }
             }
           }
 
@@ -446,7 +452,7 @@ body {
           &:hover {
             cursor: pointer;
 
-            transform: translateY(-10%);
+            transform: translateY(-5%);
           }
         }
       }
