--- a/src/style.scss
+++ b/src/style.scss
@@ -458,3 +458,18 @@ body {
     }
   }
 }
+// meals responsvness
+@media screen and (max-width: 768px) {
+  .meals {
+    .meals-Wrap {
+      .meals-Top {
+        .meals-Top-Title-Wrap {
+          .header-Title-Text {
+            font-size: 2.5rem;
+            -webkit-text-stroke: white 3px;
+          }
+        }
+      }
+    }
+  }
+}
