added styling to menu

--- a/src/style.scss
+++ b/src/style.scss
@@ -473,3 +473,13 @@ body {
     }
   }
 }
+//  menu
+.menu {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  background-color: #333;
+}
