--- a/src/style.css
+++ b/src/style.css
@@ -390,5 +390,14 @@ body {
   justify-content: center;
   background-color: #333;
 }
+.menu .menu-Wrap {
+  width: 90%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
 
 /*# sourceMappingURL=style.css.map */
