--- a/src/style.scss
+++ b/src/style.scss
@@ -482,4 +482,14 @@ body {
   align-items: center;
   justify-content: center;
   background-color: #333;
+
+  .menu-Wrap {
+    width: 90%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
 }
