--- a/src/style.scss
+++ b/src/style.scss
@@ -491,5 +491,15 @@ body {
     text-align: center;
     align-items: center;
     justify-content: center;
+
+    .menu-Top {
+      height: 30%;
+      width: 100%;
+    }
+
+    .menu-Bottom {
+      height: 60%;
+      width: 100%;
+    }
   }
 }
