--- a/src/style.scss
+++ b/src/style.scss
@@ -495,6 +495,17 @@ body {
     .menu-Top {
       height: 30%;
       width: 100%;
+      .menu-Top-Title-Wrap {
+        .menu-Title-Text {
+          font-size: 7rem;
+          -webkit-text-stroke: white 7px;
+          letter-spacing: 2px;
+          margin: 0;
+          filter: drop-shadow(5px 5px 1px black);
+          font-family: $fontThree;
+          color: white;
+        }
+      }
     }
 
     .menu-Bottom {
