--- a/src/style.scss
+++ b/src/style.scss
@@ -530,6 +530,18 @@ body {
           border: solid white 2px;
           box-shadow: 0.2rem 0.3rem #2748ff, 0.3rem 0.4rem #851212,
             0.4rem 0.5rem #838512;
+          position: relative;
+
+          &::before {
+            content: "";
+            position: absolute;
+            top: 3rem;
+            width: 100px;
+            height: 5px;
+            width: 100%;
+            left: 0;
+            background-color: white;
+          }
         }
       }
     }
